# wasm-interop

./: Cargo.toml  README.md  package-lock.json  recipes.json
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
www/: index.html  package-lock.json  package.json  vite.config.js
www/src/: main.ts
