[package]
name = "app"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Response"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-web = "0.1"
time = { version = "0.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
